what you get when you blindly cut and paste all the figma styles in. i needed to tweak the html structure too

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Ed Paradis - Personal Website</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -12,10 +13,10 @@
             <h1><span id="first-name">Ed</span><span id="last-name">Paradis</span></h1>
         </div>
         <div id="nav">
-            <button id="portfolio-projects">Portfolio Projects</button>
-            <button id="fun-projects">Fun Projects</button>
-            <button id="articles">Articles</button>
-            <button id="misc">Misc</button>
+            <div id="portfolio-projects"><a>Portfolio Projects</a></div>
+            <div id="fun-projects"><a>Fun Projects</a></div>
+            <div id="articles"><a>Articles</a></div>
+            <div id="misc"><a>Misc</a></div>
         </div>
     </div>
     <div id="right-column"></div>
