multi-typeface-style text elements do not seem to be translatable to css in a rote fashion. using auto layout and making sure each text element only has a single style seems to work ok

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div id="center-column">
         <div id="header">
             <div id="logo"></div>
-            <h1><span id="first-name">Ed</span><span id="last-name">Paradis</span></h1>
+            <div id="name">
+                <div id="first">Ed</div>
+                <div id="last">Paradis</div>
+            </div>
         </div>
         <div id="nav">
             <div id="portfolio-projects"><a>Portfolio Projects</a></div>
